[gd_scene load_steps=10 format=3 uid="uid://cip3ylp004m0l"]

[ext_resource type="Texture2D" uid="uid://dpaknhql1i6vo" path="res://sprites/cannon.png" id="1_7142m"]
[ext_resource type="Script" path="res://danger/horizontal_aligned_enemy_spawner.gd" id="1_ifb7j"]
[ext_resource type="AudioStream" uid="uid://cbctywraw6vd4" path="res://sounds/sfx/The Essential Retro Video Game Sound Effects Collection [512 sounds] By Juhani Junkala/Weapons/Cannon/sfx_wpn_cannon2.wav" id="2_5hnas"]
[ext_resource type="PackedScene" uid="uid://d3njvy425o2f1" path="res://timed_enemy.tscn" id="2_g3wya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dh8g2"]
size = Vector2(352, 288)

[sub_resource type="Gradient" id="Gradient_gllx0"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_5ocmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mjawq"]
resource_name = "line_colour_change"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gigal"]
_data = {
"RESET": SubResource("Animation_5ocmg"),
"line_colour_change": SubResource("Animation_mjawq")
}

[node name="horizontal_aligned_enemy_spawner" type="Node2D"]
script = ExtResource("1_ifb7j")
enemy_scene = ExtResource("2_g3wya")

[node name="player_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection_area"]
position = Vector2(176, 0)
shape = SubResource("RectangleShape2D_dh8g2")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_7142m")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sprite2D"]
stream = ExtResource("2_5hnas")
volume_db = -3.0
max_distance = 400.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite2D"]
rotation = 1.5708
scale = Vector2(4, 4)
emitting = false
amount = 32
one_shot = true
explosiveness = 0.9
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 140.0
damping_min = 50.0
damping_max = 70.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(1, 0, 0, 1)
color_ramp = SubResource("Gradient_gllx0")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Line2D" type="Line2D" parent="."]
width = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gigal")
}

[connection signal="body_entered" from="player_detection_area" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="player_detection_area" to="." method="_on_player_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
